changing colors of bgs

--- a/style/main.css
+++ b/style/main.css
@@ -387,6 +387,9 @@ hr {
   .tile.tile-610 {
     color: #f9f6f2;
     background: #f65e3b; }
+  .tile.tile-987 {
+    color: #f9f6f2;
+    background: #ff273b; }
   .tile.tile-1597 {
     color: #f9f6f2;
     background: #ef9f92;
